--- a/etc/supervisor.conf
+++ b/etc/supervisor.conf
@@ -4,13 +4,13 @@ nodaemon = true
 pidfile = /var/run/supervisor/supervisord.pid
 
 [supervisorctl]
-serverurl = http://localhost:9001
+serverurl = http://127.0.0.1:9001
 
 [include]
 files = /etc/supervisor.d/*.conf
 
 [inet_http_server]
-port = *:9001
+port = 0.0.0.0:9001
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
